--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "site_laudopeb",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pebengenharia.com.br/",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
+    "emailjs": "^3.7.0",
+    "emailjs-com": "^3.2.0",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.48.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "eslint": "8.6.0",
